Clock and Tween.js

--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
 </head>
 <body>
 	<h1>Three js Music Visualizer</h1>
+    <p id="clock"></p>
+    <p id="songSection"></p>
 	<audio id="mySong" src="sounds/SnackTime_01.ogg"></audio>
 
 	<script type="text/javascript" src="three.min.js"></script>
 	<script type="text/javascript" src="OrbitControls.js"></script>
+    <script src="objects.js"></script>
+    <script src="Tween.js"></script>
 	<script src="index.js"></script>
-
+    
 </body>
 </html>
